--- a/src/Styles/BookItem.css
+++ b/src/Styles/BookItem.css
@@ -5,9 +5,9 @@ li {
 }
 
 .right-side {
-  width: 50%;
+  width: 60%;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   gap: 5rem;
 }
 
@@ -20,7 +20,6 @@ li {
 }
 
 .title {
-  color: #000;
   font-size: 2.5rem;
   font-weight: bold;
   text-transform: capitalize;
@@ -39,8 +38,9 @@ li {
 }
 
 .option-buttons button {
+  font-family: 'Roboto Slab', serif;
   font-size: 1.5rem;
-  color: var(--primary-clr);
+  color: var(--secondary-clr);
   text-transform: capitalize;
 }
 
@@ -102,4 +102,16 @@ li {
 .progress-btn:focus,
 .progress-btn:hover {
   background-color: var(--secondary-clr);
+}
+
+@media screen and (max-width: 1250px) {
+  .book-chapters {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .title {
+    font-size: 1.5rem;
+  }
 }
